# sshpass

./: .gitignore  Cargo.toml  config.toml  ssh_alive.sh  topological_config.toml
abstractions/: Cargo.toml
abstractions/src/: buffer.rs  buffer_old.rs  constants.rs  context.rs  error.rs  fd_buffer.rs  ffi.rs  handlers.rs  lib.rs  log_buffer.rs  reload_config.rs  shutdown.rs  unix_poll.rs
app/: Cargo.toml
app/src/: app.rs  main.rs  plugin.rs
back/: app.rs  fds.rs-back  main copy.rs  main_back_3.rs  unix_event.rs-back
back/examples/: t1.rs-back
common/: Cargo.toml
common/src/: cli.rs  context.rs  init_log.rs  lib.rs  plugin.rs  read_fd.rs  write_fd.rs
docker/: Dockerfile
examples/: t1.rs
plugins/config_watcher/: Cargo.toml
plugins/config_watcher/src/: lib.rs
plugins/logfile/: Cargo.toml
plugins/logfile/src/: lib.rs
plugins/poll/: Cargo.toml
plugins/poll/src/: lib.rs
plugins/poll_middleware/: Cargo.toml
plugins/poll_middleware/src/: lib.rs
plugins/signal/: Cargo.toml
plugins/signal/src/: lib.rs
src/: app.rs  main.rs  main_back_1.rs  main_back_2.rs
src/common/: app_context.rs  app_shutdown.rs  coc.rs  middleware.rs  mod.rs  ware.rs
src/unix/: fds.rs  middleware.rs  mod.rs  unix_app.rs  unix_error.rs  unix_event.rs
src/unix/handlers/: mod.rs
src/unix/layers/: logger.rs  mod.rs  signalfd.rs
src/unix/modules/: handler_type.rs  logger.rs  mod.rs  poll_timeout.rs  pty.rs  signalfd.rs  std.rs  zero_bytes.rs
