[package]
name = "sshpass"
version = "0.1.0"
edition = "2021"

[dependencies]
duct = "0.13"
# tokio = { version = "1", features = ["full"] }
# tokio-util = "0.7"

# tokio = {version="1.26", features = ["rt", "macros", "rt-multi-thread", "fs", "process", "io-std", "io-util", "signal"]}
# tokio-util = { version="0.7.7", features = ["codec", "io"]}
# tokio-stream = "0.1.12"

nix = { version = "0.29.0", features = ["fs", "term", "process", "signal", "poll"] }
# rpassword = "7.3.1"
# clap = { version = "4.0", features = ["derive"] }
# env_logger = "0.11.3"
pretty_env_logger = "0.5.0"
simple_logger = {version = "5.0.0", features = ["colors", "threads", "timestamps", "stderr"]}
flexi_logger = "0.28.5"
simplelog = { version = "0.12.2", features = ["paris", "termcolor", "local-offset"] }
# termion = "4.0.2"
# totp-rs = "^5.0"
termios = "0.3.3"
# thiserror = "1.0.61"
# anyhow = "1.0.86"
# atty = "0.2"
# libc = "0.2.155"
# signal-hook = "0.3.10"
# crossbeam-channel = { version="0.5.13", features = ["std"]}
# mio = {version="1.0.0", feature=["os-poll"]}
# mio-signals = {version = "0.2.0", feature=["all"]}
log = {version = "0.4.22"}
clap = { version = "4.5.9", features = ["derive", "env"] }
bytes = "1.7.1"
syscalls ={ version = "0.6.18", features = ["full", "all"] }