[package]
name = "sshpass"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["fs", "term", "process", "signal", "poll", "ioctl"] }
simplelog = { version = "0.12.2", features = ["paris", "termcolor", "local-offset"] }
log = {version = "0.4.22"}
clap = { version = "4.5.9", features = ["derive", "env"] }
