[package]
name = "app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
abstractions = { path = "../abstractions" }
common = { path = "../common" }
nix = { version = "0.30.1", features = ["fs", "term", "process", "signal", "poll", "ioctl", "time", "event"] }
# simplelog = { version = "0.12.2", features = ["paris", "termcolor", "local-offset"] }
# log = {version = "0.4.22"}
# clap = { version = "4.5.9", features = ["derive", "env"] }
libloading = { version = "0.8.6" }
toml = "0.8.20"

[[bin]]
name = "app"
path = "src/main.rs"
