[package]
name = "common"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "common"

[dependencies]
abstractions = { path = "../abstractions" }
nix = { version = "0.30.1", features = ["fs", "term", "process", "signal", "poll", "ioctl", "time", "event"] }
# clap = { version = "4.5.9", features = ["derive", "env"] }
libloading = { version = "0.8.6" }
toml = "0.8.20"
thiserror = "2.0.12"
